# self-rag-impl

./: README.md  dev.bat  main.py  pyproject.toml  shell.bat
service/: main.py
service/models/: query.py
service/routes/: api.py
service/self_rag/: core.py  rag.py
