[project]
name = "self-rag-impl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "fastapi>=0.115.12",
    "langchain>=0.3.24",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
    "faiss-cpu>=1.7.4",
    "openai>=1.7.1",
    "beautifulsoup4>=4.12.3",
    "requests>=2.31.0",
    "langchain-community>=0.3.23",
    "tiktoken>=0.9.0",
]

[tool.uv.scripts]
dev = "uvicorn service.main:app --host=0.0.0.0 --port=8080 --reload"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
